--- a/SWQuotation/Views/Home/WhatsappQuot.cshtml
+++ b/SWQuotation/Views/Home/WhatsappQuot.cshtml
@@ -194,7 +194,7 @@
                         </div>
                         @*<br>*@
 
-                        <center><hr width="97%" color="black" /></center>
+                        <center><hr width="97%" color="black" style="margin-top: 3px"/></center>
 
                         <div class="vl" style="margin-left: 33px;">
                             <h3>&nbsp;&nbsp;WISHLIST ITEMS</h3>
@@ -334,7 +334,6 @@
                                         <h5>&nbsp;&nbsp;<label id="Display1" />:-</h5>
                                     </div>
                                     <TABLE border="1">
-
                                         <TR><TH style="font-size: 14px">Mob No<TD style="font-size:14px, "> <label id="Mob1" style="font-size: 14px" />
                                         <TR><TH style="font-size: 14px">Mail<TD style="font-size: 14px"><h12><label id="Email1" /></h12>
                                     </TABLE>
@@ -344,7 +343,6 @@
                                         <h5>&nbsp;&nbsp;<label id="Display2" />:-</h5>
                                     </div>
                                     <TABLE border="1">
-
                                         <TR><TH style="font-size: 14px">Mob No<TD style="font-size:14px, "> <label id="Mob2" style="font-size: 14px" />
                                         <TR><TH style="font-size: 14px">Mail<TD style="font-size: 14px"><h12><label id="Email2" /></h12>
                                     </TABLE>
@@ -354,7 +352,6 @@
                                         <h5>&nbsp;&nbsp;<label id="Display3" />:-</h5>
                                     </div>
                                     <TABLE border="1">
-
                                         <TR><TH style="font-size: 14px">Mob No<TD style="font-size:14px, "> <label id="Mob3" style="font-size: 14px; padding-right:90px" />
                                         <TR><TH style="font-size: 14px">Mail<TD style="font-size: 14px"><h12><label id="Email3" /></h12>
                                     </TABLE>
