--- a/SWQuotation/Views/Customers/Quot.cshtml
+++ b/SWQuotation/Views/Customers/Quot.cshtml
@@ -39,7 +39,24 @@
             width: 50%;
         }
     </style>
+    <style type="text/css">
+        table {
+            page-break-inside: auto
+        }
 
+        tr {
+            page-break-inside: avoid;
+            page-break-after: auto
+        }
+
+        thead {
+            display: table-header-group
+        }
+
+        tfoot {
+            display: table-footer-group
+        }
+    </style>
     <style>
         table {
             font-family: arial, sans-serif;
@@ -103,7 +120,7 @@
                                     <div class="col-sm-6">
                                         <div>
                                             <h3 style="margin-left: -8px;">&nbsp;&nbsp; WISHLIST DETAILS</h3>
-                                            &nbsp;&nbsp; Date&emsp;&emsp;&emsp;&emsp;          :-      &emsp;&emsp;   @Html.Label("txtFrmDate", DateTime.Now.ToString("dd-MMM-yyyy"))<br>
+                                            &nbsp;&nbsp; Date&emsp;&emsp;&emsp;&emsp;          :-      &emsp;&emsp;&nbsp;   @Html.Label("txtFrmDate", DateTime.Now.ToString("dd-MMM-yyyy"))<br>
                                             &nbsp;&nbsp; Contact Person&emsp;   :- &emsp;<label>@Session["userId"].ToString()</label><br>
                                             &nbsp;&nbsp; Contact No&emsp;&emsp;      :-&emsp;&emsp;<label id="MobNo"></label><br>
                                             &nbsp;&nbsp; Quot ID&emsp;&emsp;&emsp;&emsp;    :-&emsp;&nbsp;&nbsp;<label id="QuotId"></label>
@@ -116,18 +133,18 @@
                             </div>
                             <div>
                                 <div class="row" style="margin-left:10px ; margin-left:35px">
-                                    <div class="col-sm-6">
+                                    <div class="col-sm-6" style="margin-top: -9px;">
                                         <br />
                                         <i class="fa fa-user" aria-hidden="true"></i>
-                                        &nbsp; Name : &nbsp;<label id="CustName" style="margin-left: 38px;" />
+                                        &nbsp; Name : &nbsp;<label id="CustName" style="margin-left: 38px; " />
                                     </div>
-                                    <div class="col-sm-6">
+                                    <div class="col-sm-6"  style="margin-top: -9px;">
                                         <br />
                                         <i class="fa fa-envelope" aria-hidden="true"></i>
-                                        &nbsp; Email :<label id="Email" style="margin-left: 34px;" />
+                                        &nbsp; Email :<label id="Email" style="margin-left: 34px; margin-top: -9px;" />
                                     </div>
                                 </div>
-                                <div class="row" style="margin-left: 10px; margin-left: 35px; margin-top: -20px;">
+                                <div class="row" style="margin-left: 10px; margin-left: 35px; margin-top: -22px;">
                                     <div class="col-sm-6" style="margin-left: -2px">
                                         <br />
                                         <i class="fa fa-phone" aria-hidden="true"></i>
@@ -139,7 +156,7 @@
                                         &nbsp; GST NO : &nbsp;<label id="Gst" style="margin-left: 18px" />
                                     </div>
                                 </div>
-                                <div class="row" style="margin-left: 10px; margin-left: 35px; margin-top: -19px;">
+                                <div class="row" style="margin-left: 10px; margin-left: 35px; margin-top: -21px;">
                                     <div class="col-sm-6" style="margin-left: -3px">
                                         <br />
                                         <i class="fa fa-address-card" aria-hidden="true"></i>
@@ -156,14 +173,14 @@
                             </div>
                             @*<br>*@
 
-                            <center><hr width="97%" color="black" /></center>
+                            <center><hr width="97%" color="black" style="margin-top: 3px"/></center>
 
                             <div class="vl" style="margin-left: 33px;">
                                 <h3>&nbsp;&nbsp;WISHLIST ITEMS</h3>
                             </div>
                             <center>
                                 <div class="card-body p-0" style="width:95%; overflow-y:auto">
-                                    <table id="tblQuotProduts" class="table table-striped" style="word-wrap:break-word">
+                                    <table id="tblQuotProduts" class="table table-striped" @*style="word-wrap:break-word"*@>
                                         <thead>
                                             <tr>
                                                 <th style="width: 10px; padding-bottom: 37px; ">#</th>
@@ -182,10 +199,10 @@
                                 </div>
                             </center>
 
-                            <center><hr width="97%" color="black" /></center>
+                            <center><hr width="97%" color="black" class="no-print" /></center>
 
                             <P CLASS="breakhere"></P>
-                            <div class="row">
+                            <div class="row" @*style="margin-top: -18px;"*@>
                                 <div class="col-sm-7" style="padding:40px; margin-top:-20px">
                                     <div class="vl">
                                         <h3>&nbsp;&nbsp;BAJAJ FINANCE SCHEME</h3>
@@ -342,7 +359,6 @@
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.10.1/html2pdf.bundle.min.js" integrity="sha512-GsLlZN/3F2ErC5ifS5QtgpiJtWd43JWSuIgh7mbzZ8zBps+dvLusV+eNQATqgA/HdeKFVgA5v3S/cIrLF7QnIg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 <script src="https://code.jquery.com/jquery-1.12.3.min.js"></script>
-@*<script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/0.9.0rc1/jspdf.min.js"></script>*@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/1.3.2/jspdf.min.js"></script>
 <script src="~/cdnjs/html2pdf.bundle.min.js"></script>
 
@@ -355,7 +371,6 @@
 </script>
 
 <script type="text/javascript">
-
     // Function to share on whatsapp
     function share() {
         debugger
@@ -367,7 +382,7 @@
         /*queryForm.appendChild(linebreak);*/
 
         // Getting user input
-        let message = "Welcome to Spacewood , Dear " + name + " below is the link to quotation requested. 192.168.100.179:8080/Home/WhatsappQuot?QuotId=" + QuotId + "%26ID=" + ID;
+        let message = "Welcome to Spacewood , Dear " + name + " below is the link to quotation requested." +"%0a"+" Qtn.spacewood.in/Home/WhatsappQuot?QuotId=" + QuotId + "%26ID=" + ID;
        /* window.location.href = "192.168.100.179:8080/Home/WhatsappQuot?QuotId=" + QuotId + "&ID=" + ID;*/
 
        /* Opening URL*/
@@ -405,13 +420,12 @@
         var quotId = $('#QuotId').html();
         var element = document.getElementById('create_pdf');
         var opt = {
-            margin: [10, 0, 0, 0],
+            margin: [3, 0, 0, 0],
             filename: 'Quotation Number ' + quotId,
             image: { type: 'jpeg', quality: 0.99 },
             html2canvas: { scale: 2 },
             jsPDF: { unit: 'pt', format: 'a4', orientation: 'portrait' }
         };
-
         html2pdf().set(opt).from(element).toPdf().save();
     }
 </script>
