--- a/SWQuotation/Views/Customers/Quot.cshtml
+++ b/SWQuotation/Views/Customers/Quot.cshtml
@@ -259,8 +259,8 @@
                                         <TABLE border="1">
                                             <TR>
                                             <TR><TH>Gross Amount<TD>Rs.<label id="GAmt" />
-                                            <TR><TH>Discounted Amount<TD>Rs.<label id="Discount" />
-                                            <TR><TH>Net Amount<TD>Rs.<label id="NetAmt" />
+                                            <TR><TH>Net Amount<TD>Rs.<label id="Discount" />
+                                            <TR><TH>Total Discount<TD>Rs.<label id="NetAmt" />
                                             <TR><TH>Taxes GST(18%)<TD>Rs.<label id="Tax" />
                                             <TR><TH>Shipping Cost<TD>Rs.<label id="ShipCost" />
                                             <TR><TH>Installation Cost<TD>Rs.<label id="IntallCost" />
@@ -303,10 +303,10 @@
                                 </div>
                             </div>
 
-                            <center><hr width="97%" color="black" /></center>
-                            <P CLASS="breakhere"></P>
-                            <br>
-                            <br>
+                            @*<center><hr width="97%" color="black" /></center>*@
+                            @*<P CLASS="breakhere"></P>*@
+                            @*<br>
+                            <br>*@
                             <div class="row">
                                 <div class="col-sm-4" style="padding: 35px; margin-top: -38px; margin-right: -20px">
                                     <div class="vl">
