--- a/SWQuotation/Views/Product/ProductList.cshtml
+++ b/SWQuotation/Views/Product/ProductList.cshtml
@@ -201,6 +201,8 @@
     }
 
     function PriceList(response) {
+        var fdt = response[0].FDate;
+        var tdt = response[0].TDate;
         var datatableVariable = $("#tblprodPrice").DataTable(
             {
                 "responsive": false, "lengthChange": true, "autoWidth": false,
@@ -237,8 +239,16 @@
                     { 'data': 'PId', 'title': 'Product Id' },
                     { 'data': 'PName', 'title': 'Product Name' },
                     { 'data': 't_catm', 'title': 'Product Catogery' },
-                    { 'data': 'FDate', 'title': 'From Date' },
-                    { 'data': 'TDate', 'title': 'To Date' },
+                    {
+                        'data': 'FDate', 'title': 'From Date', "render": function (QuDt) {
+                            return QuDt = fdt.split(" ")[0];
+                        },
+                    },
+                    {
+                        'data': 'TDate', 'title': 'To Date', "render": function (QuDt) {
+                            return QuDt = tdt.split(" ")[0];
+                        },
+                    },
                     { 'data': 'PPrice', 'title': 'Product Price' },
                     /*{ 'data': 'PPrice', 'title': 'Product Price' },*/
                 ]
