--- a/SWQuotation/Views/Home/UserDetailInView.cshtml
+++ b/SWQuotation/Views/Home/UserDetailInView.cshtml
@@ -8,7 +8,7 @@
             <img src="~/images/user-img.png" class="img-circle elevation-2" alt="User Image"/>
         </div>
         <div class="info">
-        <label @*ID="username"*@ class="d-block" style="color:white">@ViewBag.Prod</label>
+        <label class="d-block" style="color:white">@ViewBag.Prod</label>
         </div>
     </div>
 
