--- a/SWQuotation/Views/Customers/Quot.cshtml
+++ b/SWQuotation/Views/Customers/Quot.cshtml
@@ -5,13 +5,17 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 <head>
-    <meta name="viewport" content="width=1100px, initial-scale=1" />
+
+    <meta name="viewport" content="width=auto, initial-scale='1.0" />
+    <meta property="og:title" content="QTN" />
+    @*<meta name="viewport" content="width=1100px, initial-scale=1" />*@
     <script src="~/Scripts/jquery-3.4.1.min.js"></script>
     <script src="~/Scripts/Customers/Quot.js"></script>
     <!-- Sweet Alert JS -->
     <link href="~/plugins/sweetalert2/sweetalert2.css" rel="stylesheet" />
     @*<link href="~/Content/sweetalert/sweet-alert.css" rel="stylesheet" />*@
     <script src="~/plugins/sweetalert2/sweetalert2.js"></script>
+    @*<link href="~/Content/Test.css" rel="stylesheet" />*@
 </head>
 
 <div id="content">
@@ -107,7 +111,7 @@
             </div>
         </div>
     </section>
-
+    @*<div id="loader"></div>*@
     <div id="container">
         <div class="row">
             <div class="col-sm-1"></div>
@@ -116,11 +120,11 @@
                     <div class="card card-warning card-outline" @*style="position:fixed"*@>
                         <div id="">
                             <div class="card-header">
-                                <div class="row">
+                                <div class="row" style="margin-top: -5px">
                                     <div class="col-sm-6">
                                         <div>
                                             <h3 style="margin-left: -8px;">&nbsp;&nbsp; WISHLIST DETAILS</h3>
-                                            &nbsp;&nbsp; Date&emsp;&emsp;&emsp;&emsp;          :-      &emsp;&emsp;&nbsp;   @Html.Label("txtFrmDate", DateTime.Now.ToString("dd-MMM-yyyy"))<br>
+                                            &nbsp;&nbsp; Date&emsp;&emsp;&emsp;&emsp;          :-      &emsp;&emsp;&nbsp;   <label id="QuotDt"></label><br>
                                             &nbsp;&nbsp; Contact Person&emsp;   :- &emsp;<label>@Session["userId"].ToString()</label><br>
                                             &nbsp;&nbsp; Contact No&emsp;&emsp;      :-&emsp;&emsp;<label id="MobNo"></label><br>
                                             &nbsp;&nbsp; Quot ID&emsp;&emsp;&emsp;&emsp;    :-&emsp;&nbsp;&nbsp;<label id="QuotId"></label>
@@ -131,14 +135,14 @@
                                     </div>
                                 </div>
                             </div>
-                            <div>
+                            <div style="margin-top: -5px">
                                 <div class="row" style="margin-left:10px ; margin-left:35px">
                                     <div class="col-sm-6" style="margin-top: -9px;">
                                         <br />
                                         <i class="fa fa-user" aria-hidden="true"></i>
                                         &nbsp; Name : &nbsp;<label id="CustName" style="margin-left: 38px; " />
                                     </div>
-                                    <div class="col-sm-6"  style="margin-top: -9px;">
+                                    <div class="col-sm-6" style="margin-top: -9px;">
                                         <br />
                                         <i class="fa fa-envelope" aria-hidden="true"></i>
                                         &nbsp; Email :<label id="Email" style="margin-left: 34px; margin-top: -9px;" />
@@ -173,42 +177,69 @@
                             </div>
                             @*<br>*@
 
-                            <center><hr width="97%" color="black" style="margin-top: 3px"/></center>
+                            <center><hr width="97%" color="black" style="margin-top: 3px" /></center>
 
-                            <div class="vl" style="margin-left: 33px;">
-                                <h3>&nbsp;&nbsp;WISHLIST ITEMS</h3>
+                            <div class="vl" style="margin-left: 33px; margin-top: -5px">
+                                <h4>&nbsp;&nbsp;WISHLIST ITEMS</h4>
                             </div>
-                            <center>
-                                <div class="card-body p-0" style="width:95%; overflow-y:auto">
-                                    <table id="tblQuotProduts" class="table table-striped" @*style="word-wrap:break-word"*@>
-                                        <thead>
-                                            <tr>
-                                                <th style="width: 10px; padding-bottom: 37px; ">#</th>
-                                                <th style="padding-bottom: 37px;">Product Name</th>
-                                                <th style="width: 137px">Per Product Price</th>
-                                                <th style=" width: 137px">Product Colour</th>
-                                                <th style="width: 10px; padding-bottom: 37px;">Units</th>
-                                                <th style="width: 10px; padding-bottom: 37px;">Quantity</th>
-                                                <th style=" width: 137px">Discounted Price</th>
-                                                <th style=" width: 137px">Product Image</th>
+                            <!--<center>
+                            <div class="card-body p-0" style="width: 97%; overflow-y: auto">
+                                <table id="tblQuotProduts" class="table table-striped">
+                                    <thead>
+                                        <tr>
+                                            <th style="width: 10px; padding-bottom: 20px; ">#</th>
+                                            <th style="padding-bottom: 20px;">Product Name</th>
+                                            <th style="width: 110px">Product Price</th>-->
+                            @*<th style=" width: 90px">Product Colour</th>*@
+                            <!--<th style="width: 10px; padding-bottom: 20px;">Qty</th>
+                                                <th style="width: 10px; padding-bottom: 20px;">Units</th>
+                                                <th style="width: 10px; padding-bottom: 20px;">Discount</th>
+                                                <th style=" width: 110px; padding-bottom: 20px;">Final Amount</th>
+                                                <th style=" width: 110px; padding-bottom: 20px;">Product Image</th>
                                             </tr>
                                         </thead>
                                         <tbody>
                                         </tbody>
                                     </table>
                                 </div>
-                            </center>
+                            </center>-->
+
+                            <form>
+                                <div class="card-body">
+                                    <div class="tab-content" id="custom-tabs-three-tabContent">
+                                        <div class="tab-pane fade show active table-responsive p-0" id="custom-tabs-three-home" role="tabpanel" aria-labelledby="custom-tabs-three-home-tab" style="margin-top: -23px">
+                                            <table id="tblQuotProduts" class="table table-bordered table-striped">
+                                                <tfoot>
+                                                    <tr>
+                                                        <th></th>
+                                                        <th>Total</th>
+                                                        <th></th>
+                                                        <th></th>
+                                                        <th></th>
+                                                        <th></th>
+                                                        <th></th>
+                                                        <th></th>
+                                                    </tr>
+                                                </tfoot>
+                                            </table>
+                                        </div>
+                                    </div>
+                                </div>
+                            </form>
+
+
 
                             <center><hr width="97%" color="black" class="no-print" /></center>
 
                             <P CLASS="breakhere"></P>
-                            <div class="row" @*style="margin-top: -18px;"*@>
+
+                            <div class="row">
                                 <div class="col-sm-7" style="padding:40px; margin-top:-20px">
                                     <div class="vl">
-                                        <h3>&nbsp;&nbsp;BAJAJ FINANCE SCHEME</h3>
+                                        <h4>&nbsp;&nbsp;BAJAJ FINANCE SCHEME</h4>
                                     </div>
                                     <center>
-                                        <table>
+                                        <table style="font-size:14px">
                                             <tr>
                                                 <th>Scheme</th>
                                                 <th>ROI</th>
@@ -256,11 +287,11 @@
                                 <input type="text" class="form-control" autocomplete="off" maxlength="50" placeholder="Enter Product Name" id="CustMo" style="display:none">
                                 <div class="col-sm-5" style="margin-top: 65px; padding-right: 40px; text-align: left;">
                                     <center>
-                                        <TABLE border="1">
+                                        <TABLE border="1" style="font-size: 14px; margin-top: -8px">
                                             <TR>
                                             <TR><TH>Gross Amount<TD>Rs.<label id="GAmt" />
-                                            <TR><TH>Net Amount<TD>Rs.<label id="Discount" />
                                             <TR><TH>Total Discount<TD>Rs.<label id="NetAmt" />
+                                            <TR><TH>Net Amount<TD>Rs.<label id="Discount" />
                                             <TR><TH>Taxes GST(18%)<TD>Rs.<label id="Tax" />
                                             <TR><TH>Shipping Cost<TD>Rs.<label id="ShipCost" />
                                             <TR><TH>Installation Cost<TD>Rs.<label id="IntallCost" />
@@ -273,7 +304,7 @@
                             </div>
                             <center><hr width="97%" color="black" /></center>
 
-                            <div class="row">
+                            <div class="row" style="margin-top: -17px">
                                 <div class="col-sm-6" style="padding:40px; margin-top:-20px">
                                     <div class="vl">
                                         <h4>&nbsp;&nbsp;TERMS & CONDITIONS </h4>
@@ -290,9 +321,9 @@
                                 </div>
                                 <div class="col-sm-6" style="margin-top: 20px; padding-right: 40px; text-align: left;">
                                     <div class="vl">
-                                        <h3>&nbsp;&nbsp;OUR BANK DETAILS </h3>
+                                        <h4>&nbsp;&nbsp;OUR BANK DETAILS </h4>
                                     </div>
-                                    <TABLE>
+                                    <TABLE style="font-size:14px">
                                         <TR>
                                         <TR><TH>Name<TD>Spacewood Furnishers Pvt Ltd
                                         <TR><TH>Bank<TD>Union Bank Of India
@@ -302,15 +333,11 @@
                                     </TABLE>
                                 </div>
                             </div>
-
-                            @*<center><hr width="97%" color="black" /></center>*@
-                            @*<P CLASS="breakhere"></P>*@
-                            @*<br>
-                            <br>*@
-                            <div class="row">
+                            <center><hr width="97%" color="black" class="no-print" style="margin-top: -37px;" /></center>
+                            <div class="row" @*style="margin-top: -17px"*@>
                                 <div class="col-sm-4" style="padding: 35px; margin-top: -38px; margin-right: -20px">
                                     <div class="vl">
-                                        <h5>&nbsp;&nbsp;<label id="Display1" />:-</h5>
+                                        <h5>&nbsp;&nbsp;<label id="Display1" style="margin-bottom: -18px; " />:-</h5>
                                     </div>
                                     <TABLE border="1">
                                         <TR><TH style="font-size: 14px">Mob No<TD style="font-size:14px, "> <label id="Mob1" style="font-size: 14px" />
@@ -319,7 +346,7 @@
                                 </div>
                                 <div class="col-sm-4" style="padding: 35px; margin-top: -38px; text-align: left; margin-right: -20px">
                                     <div class="vl">
-                                        <h5>&nbsp;&nbsp;<label id="Display2" />:-</h5>
+                                        <h5>&nbsp;&nbsp;<label id="Display2" style="margin-bottom: -18px; " />:-</h5>
                                     </div>
                                     <TABLE border="1">
                                         <TR><TH style="font-size: 14px">Mob No<TD style="font-size:14px, "> <label id="Mob2" style="font-size: 14px" />
@@ -328,7 +355,7 @@
                                 </div>
                                 <div class="col-sm-4" style="padding: 35px; margin-top: -38px; text-align: left; margin-right: -20px">
                                     <div class="vl">
-                                        <h5>&nbsp;&nbsp;<label id="Display3" />:-</h5>
+                                        <h5>&nbsp;&nbsp;<label id="Display3" style="margin-bottom: -18px; " />:-</h5>
                                     </div>
                                     <TABLE border="1">
                                         <TR><TH style="font-size: 14px">Mob No<TD style="font-size:14px, "> <label id="Mob3" style="font-size: 14px; padding-right:90px" />
@@ -362,28 +389,23 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/1.3.2/jspdf.min.js"></script>
 <script src="~/cdnjs/html2pdf.bundle.min.js"></script>
 
-<script>
-    var today = new Date();
-    var dd = String(today.getDate()).padStart(2, '0');
-    var mm = String(today.getMonth() + 1).padStart(2, '0'); //January is 0!
-    var yyyy = today.getFullYear();
-    today = mm + '/' + dd + '/' + yyyy;
-</script>
 
 <script type="text/javascript">
     // Function to share on whatsapp
-    function share() {
+    function share(mail) {
         debugger
-        var QuotId = $('#QuotId').html();
+        //var email = mail.trim();
+        //var W = QuotId;
+        var QuotId = $('#QuotId').html() + '.pdf';
         var mob = $('#CustMo').val();
         var ID = '@Session["userId"].ToString()';
         var name = $('#CustName').html();
         let linebreak = document.createElement("br");
-        /*queryForm.appendChild(linebreak);*/
 
         // Getting user input
-        let message = "Welcome to Spacewood , Dear " + name + " below is the link to quotation requested." +"%0a"+" Qtn.spacewood.in/Home/WhatsappQuot?QuotId=" + QuotId + "%26ID=" + ID;
-       /* window.location.href = "192.168.100.179:8080/Home/WhatsappQuot?QuotId=" + QuotId + "&ID=" + ID;*/
+
+        let message = "Welcome to Spacewood , Dear " + name + " below is the link to quotation requested." + "%0a" + "qtn.spacewood.in/PDF/" + QuotId;
+        //window.location.href = "/Home/WhatsappQuot?QuotId=" + QuotId + "&ID=" + ID;
 
        /* Opening URL*/
         window.open(
@@ -394,7 +416,7 @@
 
 <script>
     function back() {
-        debugger
+        
         window.location.href = "/Home/Dashboard";
     }
 </script>
@@ -417,14 +439,15 @@
 
 <script>
     function Pdf() {
+        debugger
         var quotId = $('#QuotId').html();
         var element = document.getElementById('create_pdf');
         var opt = {
             margin: [3, 0, 0, 0],
-            filename: 'Quotation Number ' + quotId,
+            filename: quotId,
             image: { type: 'jpeg', quality: 0.99 },
-            html2canvas: { scale: 2 },
-            jsPDF: { unit: 'pt', format: 'a4', orientation: 'portrait' }
+            html2canvas: { scale: 3 },
+            jsPDF: { unit: 'pt', format: 'a4', orientation: 'portrait' },
         };
         html2pdf().set(opt).from(element).toPdf().save();
     }
