--- a/SWQuotation/Views/Home/Dashboard.cshtml
+++ b/SWQuotation/Views/Home/Dashboard.cshtml
@@ -5,6 +5,7 @@
 }
 <script src="~/Scripts/jquery-3.4.1.min.js"></script>
 @*<script src="~/Scripts/Dashboard/Dashboard.js"></script>*@
+
 <!-- Sweet Alert JS -->
 <link href="~/plugins/sweetalert2/sweetalert2.css" rel="stylesheet" />
 @*<link href="~/Content/sweetalert/sweet-alert.css" rel="stylesheet" />*@
@@ -12,18 +13,19 @@
 
 <section class="content-header">
     <div class="container-fluid">
-            <div class="row mb-2">
-                <div class="col-sm-6">
-                    <h1 class="m-0">Dashboard</h1>
-                </div>
-                <div class="col-sm-6">
-                    <ol class="breadcrumb float-sm-right">
-                        <li class="breadcrumb-item"><a href="~/Home/Dashboard">Home</a></li>
-                        <li class="breadcrumb-item active">Dashboard</li>
-                    </ol>
-                </div>
+        <div class="row mb-2">
+            <div class="col-sm-6">
+                <h1 class="m-0">Dashboard</h1>
+            </div>
+            <div class="col-sm-6">
+                <ol class="breadcrumb float-sm-right">
+                    <li class="breadcrumb-item"><a href="~/Home/Dashboard">Home</a></li>
+                    @*<li class="breadcrumb-item"><a href="@Url.Action("Dashboard", "Home")">Home</a></li>*@
+                    <li class="breadcrumb-item active">Dashboard</li>
+                </ol>
             </div>
         </div>
+    </div>
 </section>
 
 
