--- a/SWQuotation/Views/Home/ViewQuot.cshtml
+++ b/SWQuotation/Views/Home/ViewQuot.cshtml
@@ -50,30 +50,24 @@
                                     <div class="form-group">
                                         <label class="col-sm-10 col-form-label">Customer Name</label>
                                         <div class="col-sm-11">
-                                            <input type="text" class="form-control" autocomplete="off" maxlength="100" placeholder="Enter Address" id="Txtname" readonly>
+                                            <input type="text" class="form-control" autocomplete="off" maxlength="100" id="Txtname" readonly>
                                         </div>
                                     </div>
                                 </div>
                                 <div class="col-sm-6">
                                     <div class="form-group">
-                                        <label class="col-sm-10 col-form-label">Date of Birth</label>
+                                        <label class="col-sm-10 col-form-label">Mobiles No</label>
                                         <div class="col-sm-11">
-                                            <input type="text" class="form-control" autocomplete="off" maxlength="100" placeholder="Enter Address" id="Txtdob" readonly>
+                                            <input type="text" class="form-control" autocomplete="off" maxlength="100" id="Txtmob" readonly>
                                         </div>
                                     </div>
                                 </div>
+
                             </div>
                         </div>
-                        <div class="form-group">
+                        @*<div class="form-group">
                             <div class="row">
-                                <div class="col-sm-6">
-                                    <div class="form-group">
-                                        <label class="col-sm-10 col-form-label">Mobile No</label>
-                                        <div class="col-sm-11">
-                                            <input type="text" class="form-control" autocomplete="off" maxlength="100" placeholder="Enter Address" id="Txtmob" readonly>
-                                        </div>
-                                    </div>
-                                </div>
+                                
                                 <div class="col-sm-6">
                                     <div class="form-group">
                                         <label class="col-sm-10 col-form-label">Alter No.</label>
@@ -103,7 +97,7 @@
                                     </div>
                                 </div>
                             </div>
-                        </div>
+                        </div>*@
                         <div class="form-group">
                             <div class="row">
                                 <div class="col-sm-6">
@@ -155,16 +149,15 @@
                                             <table id="tblQuotation" class="table table-bordered table-striped" width="98%">
                                                 <thead>
                                                     <tr>
-                                                        <th><center>SrNo.</center></th>
-                                                        <th><center>Product Name</center></th>
-                                                        <th><center>Quantity</center></th>
-                                                        <th><center>ProductPrice</center></th>
-                                                        <th><center>DiscountedPrice</center></th>
-                                                        <th><center>Position</center></th>
                                                     </tr>
                                                 </thead>
                                                 <tfoot>
                                                     <tr>
+                                                        <th></th>
+                                                        <th></th>
+                                                        <th></th>
+                                                        <th></th>
+                                                        <th></th>
                                                         <th></th>
                                                         <th></th>
                                                         <th></th>
@@ -232,7 +225,6 @@
                                         <div class="col-sm-11">
                                             <input type="number" class="form-control" autocomplete="off" maxlength="50" placeholder="" id="Txt_totaltax" readonly>
                                             <input type="number" class="form-control" autocomplete="off" maxlength="50" placeholder="" id="Txt_Tc" style="display:none">
-
                                         </div>
                                     </div>
                                     <div class="col-sm-6">
